2011-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/OpenMP/OpenMPandInline.r: Added new example for
	OpenMP via inline, comparing simple loops with plain Rcpp and sugar

2011-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Misc/ifelseLooped.r: Added new example based on blog
	post today, and a StackOverflow ansers---and which shows how Rcpp can
	accelerate loops that may be difficult to vectorise due to dependencies

        * inst/examples/Misc/: New directory for small examples regrouping
	the new example as well as the fibonacci example added in Rcpp 0.9.6

2011-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added a short section including an
	example on the issue raised by Murray wherein 64 bit 'long' integer
	types can be cast with loss to numeric types without error or warning.

2011-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Function.R: new unit test for accessing a
	non-exported function from a namespace

2011-07-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.6
        * inst/NEWS: Release 0.9.6
        * inst/include/Rcpp/config.h: Release 0.9.6
        * debian/*: Similarly updated for new release to Debian

2011-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Fibonacci/fib.r: New example showing how to compute a
	Fibonacci sequence using Rcpp and compare it to R and byte-compiled R

2011-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGibbs/RcppGibbs.R: New example RcppGibbs,
	extending Sanjog Misra's Rcpp illustration of Darren Wilkinson's
	comparison of MCMC Gibbs Sampler implementations;
	* inst/examples/RcppGibbs/timeRNGs.R: added short timing on Normal
	and Gaussian RNG draws between Rcpp and GSL as R's rgamma() is seen
	to be significantly slower

2011-07-13  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/traits/is_eigen_base.h: helper traits to